# SurgiSabre

./: .env.example  .gitignore  ASSET_MANIFEST.md  ATTRIBUTION.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
apps/: surgisabre.spark.arm64.kit
compat/: openxr_required_extensions.c
config/: cloudxr.env.example  dependencies.lock.toml
docs/: architecture.md  deployment.md
patches/: isaaclab-cloudxr-grip-readiness.patch  isaaclab-sim601-rigid-material-compat.patch  isaacteleop-790d6cb-build-provenance.patch  isaacteleop-790d6cb-cloudxr-version-override.patch  isaacteleop-790d6cb-oob-hub-only.patch
scripts/: __init__.py  apply_isaaclab_patches.sh  bootstrap_sources.sh  build_isaacsim_spark.sh  build_isaacteleop_spark.sh  build_openxr_compat_spark.sh  check_capacity_spark.sh  check_public_tree.sh  launch_cloudxr_spark.sh  launch_surgisabre_spark_sim601.sh  merge_telemetry.py  prepare_cloudxr_runtime_spark.sh  prepare_isaacsim_6_0_1_overlay_spark.sh  prepare_isaacteleop_build_tree_spark.sh  render_cloudxr_config.sh  resource_monitor_spark.sh  run_surgisabre.py  verify_i4h_asset.py
src/surgisabre/: __init__.py  course.py  haptics.py  isaac_course.py  isaac_score.py  layout.py  profiles.py  retargeting.py  runtime.py  scene.py  score.py  telemetry.py
tests/: test_course.py  test_haptics.py  test_isaac_course.py  test_isaac_score.py  test_layout.py  test_retargeting.py  test_runtime.py  test_scene.py  test_score.py  test_telemetry.py
(+3 files in other folders)
