[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgisabre"
version = "0.1.0"
description = "Immersive dVRK teleoperation familiarisation with Isaac Lab and IsaacTeleop"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Chris von Csefalvay" }]
dependencies = ["numpy>=1.26,<3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.11,<1"]

[project.urls]
Repository = "https://github.com/chrisvoncsefalvay/SurgiSabre"
Documentation = "https://github.com/chrisvoncsefalvay/SurgiSabre#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
